fix(GlAvatarInline): Fix spacing in GlAvatarInlne
Absolute positioning was used previously for this, which necessitated a
lot of manual size management. This resulted in a bug where the parent
component did not have the right width.

This change uses negative right margin on avatars when the avatar-inline
component is collapsed so that the parent element will always have the
same size as the apparent size of the avatars.

This change also corrects the way positive right margins are applied
when the avatars-inline is not collapsed so that the final avatar does
not have unnecessary right margin.

--- a/src/components/base/avatars_inline/avatars_inline.scss
+++ b/src/components/base/avatars_inline/avatars_inline.scss
@@ -3,15 +3,9 @@
 
   &-child {
     @include gl-display-inline-flex;
-    @include gl-mr-3;
-  }
 
-  &.collapsed {
-    @include gl-relative;
-
-    .gl-avatars-inline-child {
-      @include gl-absolute;
-      @include gl-mr-0;
+    &:not(:last-child) {
+      @include gl-mr-3;
     }
   }
 
